--- a/frontend/src/styles/components/players.css
+++ b/frontend/src/styles/components/players.css
@@ -3,12 +3,12 @@
     display: flex;
     flex-direction: column;
     gap: var(--spacing-sm);
-    padding-top: var(--spacing-md);
+    /* padding-top: var(--spacing-md); */
     margin-top: var(--spacing-xs);
     margin-bottom: var(--spacing-sm);
     width: 100%;
-    /* height: 100%; */
-    overflow-y: auto;
+    height: auto;
+    overflow-y: visible;
     scroll-behavior: smooth;
     /* justify-content: center; */
     scrollbar-width: thin;
@@ -26,6 +26,8 @@
     font-weight: 600;
     gap: var(--spacing-md);
     max-height: 3rem;
+    margin-left: calc(var(--spacing-sm) + 16px);
+    /* margin-left: var(--spacing-md); */
 }
 
 .player-item span {
@@ -66,9 +68,12 @@
 /* Responsive styling for different player counts */
 @media (min-width: 768px) {
   /* For larger screens, optimize the layout */
-  .selected-players {
+  .selected-players-wrapper {
     max-height: 400px;
-    overflow-y: auto;
+  }
+  
+  .selected-players {
+    max-height: 100%;
   }
 }
 
